--- a/css/style.less
+++ b/css/style.less
@@ -3581,11 +3581,11 @@ a:hover{
 	}
 }
 /********footer**********/
-
+ 
 .footer{
 
-	min-width: 100%;
-	padding: 30px 0;
+	min-width: 100px;
+	padding: 30px 15px;
 	
 	background-color: #3c3838;
 	font-size: 15px;
@@ -3598,7 +3598,6 @@ a:hover{
 	
 	.author{
 		float: right;
-		margin-right: 25px;
 	}
 	
 	a:hover{
