--- a/css/style.less
+++ b/css/style.less
@@ -719,7 +719,7 @@ Template created with use of a Responsive Framework http://stas-melnikov.ru/resp
 	
 	position: relative;
 	text-align: left;
-	margin: 0 auto 65px;
+	margin: 0 auto;
 	
 	&:hover{
 		.arrow{
@@ -1221,6 +1221,7 @@ Template created with use of a Responsive Framework http://stas-melnikov.ru/resp
 
 	padding-left: 20px;
 	padding-right: 20px;
+	padding-top: 65px;
 	
 	min-width: 100px;
 	max-width: 1200px;
@@ -3534,7 +3535,7 @@ a{
 #content{
 
 	text-align: left;
-	
+
 	.main_container_item{
 		margin-bottom: 35px;
 	}
