--- a/css/style.less
+++ b/css/style.less
@@ -1249,6 +1249,35 @@ Template created with use of a Responsive Framework http://stas-melnikov.ru/resp
 	}
 }
 
+.hashtag {
+
+	position: absolute;
+	top: 0;
+	right: 0;
+	
+	font-size: 14px;
+	font-weight: 400;
+	
+	display: block;
+	width: 70px;
+	background-color: #fff;
+	
+}
+
+.price {
+
+	position: absolute;
+	top: 25px;
+	right: 0;
+	
+	font-size: 14px;
+	font-weight: 400;
+	
+	display: block;
+	width: 70px;
+	background-color: #bfbfbf;
+}
+
 .columns2{ 
 	.main_container_item{
 		width: 46%;
