--- a/css/style.less
+++ b/css/style.less
@@ -1249,7 +1249,7 @@ Template created with use of a Responsive Framework http://stas-melnikov.ru/resp
 	}
 }
 
-.hashtag {
+.hashtag, .price {
 
 	position: absolute;
 	top: 0;
@@ -1265,17 +1265,7 @@ Template created with use of a Responsive Framework http://stas-melnikov.ru/resp
 }
 
 .price {
-
-	position: absolute;
-	top: 25px;
-	right: 0;
-	
-	font-size: 14px;
-	font-weight: 400;
-	
-	display: block;
-	width: 70px;
-	background-color: #bfbfbf;
+	top: 30px;
 }
 
 .columns2{ 
