--- a/css/style.css
+++ b/css/style.css
@@ -1068,7 +1068,8 @@ Template created with use of a Responsive Framework http://stas-melnikov.ru/resp
 .main_container_item .img_production {
   max-width: 92%;
 }
-.hashtag {
+.hashtag,
+.price {
   position: absolute;
   top: 0;
   right: 0;
