--- a/css/style.less
+++ b/css/style.less
@@ -1249,7 +1249,7 @@ Template created with use of a Responsive Framework http://stas-melnikov.ru/resp
 	}
 }
 
-.hashtag, .price {
+.stas_project_hashtag, .stas_project_price {
 
 	position: absolute;
 	top: 0;
@@ -1264,7 +1264,7 @@ Template created with use of a Responsive Framework http://stas-melnikov.ru/resp
 	
 }
 
-.price {
+.stas_project_price {
 	top: 30px;
 }
 
@@ -3425,7 +3425,7 @@ a{
 
 /********************Project************/
 
-.project{
+.stas_project{
 
 	&:after{
 		.clear();
