--- a/core/css/style.less
+++ b/core/css/style.less
@@ -479,7 +479,7 @@ p{
 
 @media screen and (max-width: 640px){ 
 	.logo{
-		font-size: 14px;
+		font-size: 20px;
 	}
 }
 
@@ -742,6 +742,15 @@ p{
 	color: @color_theme_3;
     font-size: 46px;
     font-style: italic;
+}
+
+@media screen and (max-width: 1200px){
+ 
+	.fullwidth-banner__inner{
+		width: 100%;
+		margin-top: 30px;
+		font-size: 38px;
+	}
 }
 
 /*
