--- a/core/css/style.less
+++ b/core/css/style.less
@@ -236,11 +236,21 @@ p{
 	
 	.display-ib-box__item{
 		
-		width: 23%;
-		margin-right: 2%;
+		width: 24%;
+		display: inline-block;
+		vertical-align: top;
+		
+		margin-right: .5%;
+		margin-left: .5%;
 
+		&:nth-of-type(4n+1){
+			margin-right: .5%;
+			margin-left: 0;
+		}
+		
 		&:nth-of-type(4n+4){
 			margin-right: 0;
+			margin-left: .5%;
 		}
 	}
 }
@@ -332,45 +342,30 @@ p{
 	}
 }
 
-@media screen and (max-width: 1024px){ 
+@media screen and (max-width: 1280px){ 
 
 	.display-ib-box_4columns{
 		
 		.display-ib-box__item{
 			
 			width: 32%;
-			margin-right: 1%;
 
+			&:nth-of-type(3n+2){
+				margin-left: .5%;
+			}			
+			
 			&:nth-of-type(3n+3){
 				margin-right: 0;
 			}
 			
 			&:nth-of-type(4n+4){
-				margin-right: 1%;
+				margin-right: .5%;
 			}
 		}
 	}
 }
 
 @media screen and (max-width: 980px){ 
-
-	.display-ib-box_4columns{
-		
-		.display-ib-box__item{
-			
-			width: 48%;
-			margin-right: 1%;
-			
-			&:nth-of-type(3n+3){
-				margin-right: 1%;
-			}
-			
-			&:nth-of-type(2n+2){
-				margin-right: 0;
-				margin-left: 0;
-			}
-		}
-	}
 	
 	.floatbox_column2{
 	
@@ -386,15 +381,49 @@ p{
 	}
 }
 
+@media screen and (max-width: 768px){ 
+
+	.display-ib-box_4columns{
+		
+		.display-ib-box__item{
+			
+			width: 49%;
+			
+			&:nth-of-type(3n+2), &:nth-of-type(3n+3){
+				margin-right: .5%;
+				margin-left: 0;
+			}
+			
+			&:nth-of-type(2n+2){
+				margin-right: 0;
+				margin-left: .5%;
+			}
+		}
+	}
+}
+
 @media screen and (max-width: 640px){
 	
-	.display-ib-box_2columns, .display-ib-box_3columns, .display-ib-box_4columns{
+	.display-ib-box_2columns, .display-ib-box_3columns{
 		
 		.display-ib-box__item{
 			
 			width: 100%;
 			
 			&:nth-of-type(2n+1){
+				margin-left: 0;
+				margin-right: 0;
+			}
+		}
+	} 
+	
+	.display-ib-box_4columns{
+		
+		.display-ib-box__item{
+			
+			width: 100%;
+			
+			&:nth-of-type(2n+1), &:nth-of-type(2n+2){
 				margin-left: 0;
 				margin-right: 0;
 			}
@@ -630,9 +659,14 @@ p{
 }
 
 .menu-list__item{
+
 	display: inline-block;
 	vertical-align: top;
-	padding: 5px 10px;
+	margin: 5px 10px;
+	
+	&:last-of-type{
+		margin-right: 0;
+	}
 }
 
 .menu__link{
