--- a/theme/css/projects.less
+++ b/theme/css/projects.less
@@ -12,7 +12,7 @@
 	margin-bottom: 2rem;
     position: relative;
 	text-align: center;
-	width: 23%;
+	width: 23.5%;
 	
 	&:nth-of-type(4n+2){
 		margin-left: 2%;
@@ -47,7 +47,7 @@
 	.m_transition(opacity, .6s, ease, 0s);
 }
 
-.project__name-project{
+.project__name{
 	
 	width: 98%;
 	padding: 1%;
