remove unuse css

--- a/theme/css/components/navigation.less
+++ b/theme/css/components/navigation.less
@@ -33,7 +33,7 @@
 
 	display: inline-block;
 	vertical-align: middle;
-	margin: .5rem 1rem;
+	margin: 0 1rem;
 	
 	&:last-of-type{
 		margin-right: 0;
