--- a/theme/css/page_sections/fullwidth_banner.less
+++ b/theme/css/page_sections/fullwidth_banner.less
@@ -14,7 +14,7 @@
 	vertical-align: middle;	
 }
 
-.fullwidth-banner__inner{
+.fullwidth-banner__label{
 	
 	width: 45%;
 	display: inline-block;
@@ -28,7 +28,7 @@
 
 @media screen and (max-width: 768px){
  
-	.fullwidth-banner__inner{
+	.fullwidth-banner__label{
 		width: 100%;
 		text-align: center;
 	}
