--- a/theme/css/typographics/titles.less
+++ b/theme/css/typographics/titles.less
@@ -5,7 +5,7 @@
 	color: @color_black;
 }
 
-.section-title{
+.title_border-yes{
 	margin-bottom: 3.5rem;
 	padding-bottom: 1.5rem;
 	border-bottom: 2px solid @color_gray;
